Fri Jun 19 09:28:45 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (*_numerator,*_denominator): moved to rational.c.

	* rational.c (*_numerator,*_denominator): moved from numeric.c.

Fri Jun 19 08:14:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (big_lshift, big_rshift): return Bignum always withou
	  normalization.  [ruby-dev:38679]

Thu Jun 18 22:31:38 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_s_convert): calls to_r when the given argument
	  is non-integer.

	* rational.c (nurat_s_convert): raises TypeError when the given
	  argument is nil.

	* complex.c (nucomp_s_convert): ditto.

Thu Jun 18 20:32:11 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (num_numerator, num_denominator): use
	  to_r [ruby-core:23910].

Thu Jun 18 16:21:05 2009  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 1.4.0 r5083.
	* test/minitest/*.rb: ditto.

Thu Jun 18 10:12:49 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): went infinity too
	  early.  add BASE_FIG margin.  [ruby-dev:38673]

Thu Jun 18 01:35:51 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_cmp): Infinity is greater than any bignum
	  number.  [ruby-dev:38672]

	* bignum.c (rb_big_cmp): ditto.

Thu Jun 18 01:29:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): drive letter is ascii only.
	  [ruby-dev:38612]

Thu Jun 18 01:09:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ridir, RI_BASE_NAME): fixed for path expansion.
	  [ruby-core:23876]

Wed Jun 17 23:46:08 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_coerce): accepts Complex when the imag is
	  exact zero.

Wed Jun 17 21:25:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* bignum.c (rb_big_fdiv): checks whether the given second argument
	  can be converted to float properly.

	* numeric.c (fix_fdiv): calls rb_big_fdiv when the given second