@@ -1,3 +1,10 @@
+Fri Jun 19 17:04:59 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* numeric.c (flo_cmp): should always return nil for NaN.
+
+	* numeric.c (flo_cmp): handle infinite value specially using
+	  infinite? method internally.  [ruby-dev:38681]
+
 Fri Jun 19 09:28:45 2009  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* numeric.c (*_numerator,*_denominator): moved to rational.c.
